fix alignment issues

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -1,5 +1,6 @@
 $bg-color: #E8E8E8
 $accent: #f3f3f3
+$brand-color: #2CD889
 $text: #383838
 
 $max-width: 1088px
@@ -28,10 +29,6 @@ body
     height: 100%
     padding: 0
 
-.full-img
-    width: 100%
-    height: 100%
-    object-fit: cover
 
 .main
     max-width: $max-width
@@ -51,11 +48,20 @@ body
         min-height: 100vh 
         display: flex 
         flex-direction: column
+    .img-container 
+        height: auto
 
 .img-container
     width: 100%
-    height: 50vh
+    height: 75vh
     margin: 0 auto
+
+.full-img
+    width: 100%
+    height: 100%
+    object-fit: cover
+.align-left 
+    object-position: 10%
 
 .big-header 
     font-size: 4em
@@ -76,8 +82,10 @@ body
 $offset-top: 50px
 
 .img-shadow
+    position: relative
     z-index: -1
     background: $accent
+    // border-bottom: 5px solid $brand-color
 @media(max-width: 959px)
     .img-shadow 
         position: absolute
@@ -108,17 +116,15 @@ $offset-top: 50px
     // max-width: 959px
     margin: 0 auto
 .project-section 
-    margin: 100px 0
-    h1, h2, h3, h4, h5, h6, p
-        padding: 1.6%
-
+    margin-top: 50px
+    padding: $padding
+    p 
+        padding: 3.6% 0
     .img-container
-        padding: 10px 10px
-        display: inline-block
-        max-height: 80vh
-        .full-img 
-            width: 100%
-            max-height: 80vh
+        width: 100%
+        margin: 10px 0
+       
+       
 .research-stats
     margin: 50px 0
     min-height: 50vh
@@ -148,6 +154,7 @@ $offset-top: 50px
 
         .landing-block 
             margin: 0 auto
+            padding: 0
             padding-top: $nav-height + 20px
             min-height: 100vh
             display: grid 
@@ -164,21 +171,38 @@ $offset-top: 50px
         .landing-img.img-container
             grid-column: 6 / -2
             grid-row: 1
+            position: relative
+            // z-index: 2
+
+        .profile-img
+            position: relative
+            z-index: -1
+            &::after 
+                content: ''
+                position: absolute
+                border: 10px solid $brand-color
+                $border-offset: 20px
+                top: $border-offset 
+                left: $border-offset
+                right: -$border-offset 
+                bottom: -$border-offset
+                box-shadow: 3px 3px 6px rgba(black, .1)
+                // z-index: -1
 
         .landing-text
             grid-row: 2
             grid-column: 3 / span 4
         
         .block 
-           min-height: 100vh
-           display: grid 
-           grid-gap: $grid-gap
-           grid-template-rows: 40px 60vh minmax(auto, 100px)
-           grid-template-columns: repeat(12, 1fr)
+            min-height: 100vh
+            display: grid 
+            grid-gap: $grid-gap
+            grid-template-rows: 40px 60vh minmax(auto, 100px)
+            grid-template-columns: repeat(12, 1fr)
 
-        .img-container
-           height: 100%
-           grid-row: 2
+            .img-container
+                height: 100%
+                grid-row: 2
 
         .img-container_left
             grid-column: 1 / span 8
@@ -203,28 +227,69 @@ $offset-top: 50px
             position: relative
             align-self: flex-end
             grid-row: 3 
-               
-
+            padding-left: $padding
             &-left 
                 grid-column: 1 / span 2
-                &:before 
-                    content: ''
-                    position: absolute
-                    height: 5px
-                    width: 75px 
-                    background: $accent 
-                    bottom: 0
-                    right: -77px
-            &-right 
+            &-right
                 grid-column: 10 / -1
+
+            &::after 
+                content: ''
+                position: absolute
+                height: 100% 
+                width: 100%
+
+                top: -15px
+                bottom: 0
+                background: darken($accent, 30%)
+                opacity: .2
+                z-index: -2
+                transition: .4s ease-out
+            &::before 
+                content: ''
+                position: absolute
+                height: 5px
+                width: 75px 
+                background: $brand-color 
+                bottom: 0
+                transition: .4s ease-out
+            &:hover 
+
+                &:after 
+                    top: 0 
+                    left: 0 
+                    // right: $padding
+                    opacity: .4
+                    left: -5px 
+                    right: 5px 
+                    width: calc(100% + 10px)
+
+                    transition: .3s ease-out
                 &:before 
-                    content: ''
-                    position: absolute
-                    height: 5px
-                    width: 75px 
-                    background: $accent 
+                    // width: calc(100%, -80px)
+                    height: 100%
+                    transition: .3s ease-out
+            &-left 
+
+                &::after 
+                    left: -15px
+                    right: 15px
+                &:before 
+                    right: -90px
+                    z-index: -1
+                    transform-origin: bottom right
+                    transition: .2s ease-out
+            &-right 
+                &::after 
+                    left: 15px
+                    right: -15px
+                &:before
+                    left: -90px
                     bottom: 0
-                    left: -80px
+                    z-index: -1
+                    transform-origin: bottom left
+        
+
 
         .extras-grid
             display: grid 
@@ -263,6 +328,23 @@ $offset-top: 50px
                 grid-row: 1 / -1
                 transform: scale(1)
                 grid-column: 8 / -2
+            h1 
+                padding: 0 16px
+        .project-section
+                padding: 16px
+                h1, h2, h3, h4, h5, h6, p
+                    padding: 16px 0
+                
+
+        @media(min-width:1080px)
+            .project-landing
+                h1
+                    padding: 0
+            .project-section
+                padding: 0
+                h1, h2, h3, h4, h5, h6, p
+                    padding:  0 $padding
+        
 
         .research-stats 
             display: flex
@@ -271,6 +353,17 @@ $offset-top: 50px
             min-height: auto
         .stat-item 
             width: 200px
+
+        .img-row
+            display: grid 
+            grid-template-columns: repeat(12, 1fr)
+            grid-gap: 0 10px
+            padding: 0
+            .img-container 
+                margin: 0
+                grid-column: span 4
+
+
             
 
 
